# zlob

./: .clang-format  .gitignore  LICENSE  Makefile  README.md  build.zig  build.zig.zon  release.sh  std_bench
.github/workflows/: build.yml  ci.yml
bench/: bench_brace.zig  bench_fnmatch.zig  bench_matchPaths.zig  bench_multi_suffix.zig  bench_recursive.zig  bench_tree_sizes.zig  benchmark.zig  compare_libc.zig  compare_walker.zig  perf_recursive.zig  perf_test_libc.zig  profile.zig  profile_big_repo.zig  test_recursive.zig  trace_glob.zig
examples/: basic.zig  benchmark.zig  compare_libc.zig  matchfiles.zig  perf_test_libc.zig  profile.zig  profile_big_repo.zig  test_libc_style.zig  test_new_features.zig
include/: zlob.h
reproducer/: Makefile  README.md  host  host.c  libplugin.zig  libplugin_fixed.zig
rust/: Cargo.toml  README.md  build.rs  build.zig
rust/.cargo/: config.toml
rust/benches/: glob_comparison.rs  walk_comparison.rs
rust/examples/: walk_bench.rs
rust/src/: error.rs  ffi.rs  ffi_stub.rs  flags.rs  indicies.rs  lib.rs  match_paths.rs  pattern.rs  slices.rs  walk.rs  zlob.rs
rust/tests/: walk_e2e_repos.rs
scripts/: run-benchmarks.sh
src/: brace_optimizer.zig  c_lib.zig  compiled_pattern.zig  extglob.zig  flags.zig  fnmatch.zig  gitignore.zig  glob.zig  glob_libc.zig  glob_libc_test.zig  glob_rust_tests.zig  glob_test.zig  lib.zig  main.zig  matchfiles_test.zig  missing_flags_test.zig  path_matcher.zig  pattern_context.zig  root.zig  sorting.zig  suffix_match.zig  utils.zig  walk.zig  walk_darwin.zig  walk_windows.zig  walker.zig  zlob.zig
src/walker/: ignore_rules.zig  queue.zig  scan.zig  scan_darwin.zig  scan_windows.zig  types.zig  walker.zig  worker.zig
test/: dlopen_consumer.zig  test_absolute_paths.zig  test_append.zig  test_basic.zig  test_brace.zig  test_c_api.c  test_dlopen_tls.zig  test_edge_cases.zig  test_errfunc.zig  test_extglob.zig  test_fnmatch.zig  test_gitignore.zig  test_gitignore_e2e.zig  test_glibc.zig  test_internal.zig  test_libc_comparison.sh  test_path_matcher.zig  test_posix.zig  test_rust_glob.zig  test_static_tls_budget.zig  test_utils.zig  test_walk.zig
