[package]
name = "zlob"
version = "1.1.0"
edition = "2021"
license = "MIT"
description = "SIMD optimized glob pattern matching library faster than glob crate"
keywords = ["glob", "pattern", "matching", "simd", "gitignore"]
categories = ["filesystem", "text-processing"]
readme = "README.md"

[dependencies]
bitflags = "2"

[build-dependencies]
bindgen = "0.70"

[dev-dependencies]
tempfile = "3"
