[package]
name = "zlob"
version = "1.5.0-dev.3"
edition = "2024"
license = "MIT"
description = "SIMD optimized glob pattern matching library faster than glob crate"
keywords = ["glob", "pattern", "matching", "simd", "gitignore"]
categories = ["filesystem", "text-processing"]
readme = "README.md"
repository = "https://github.com/dmtrKovalenko/zlob"
homepage = "https://github.com/dmtrKovalenko/zlob"
documentation = "https://docs.rs/zlob"
rust-version = "1.85"
include = [
    "/src/**/*",
    "/Cargo.toml",
    "/Cargo.lock", 
    "/build.rs",
    "/README.md",
    # Zig build system (symlinks resolved by cargo during packaging)
    "/build.zig",
    "/build.zig.zon",
    "/include/**/*",
    # Zig sources - symlinked as zig-src/, will be copied to package
    "/zig-src/**/*.zig",
    "!/zig-src/.zig-cache/**",
]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]

[dependencies]
bitflags = "2"

[build-dependencies]
bindgen = "0.72"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
glob = "0.3"
globset = "0.4"
walkdir = "2"
ignore = "0.4"

[[bench]]
name = "glob_comparison"
harness = false

[[bench]]
name = "walk_comparison"
harness = false
